<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Insurance</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="exit">Exit!</string>
    <string name="start_btn">Start!</string>
    
    <string name="score_page">Score</string>
    <string name="journeys_page">Journeys</string>
    <string name="badges_page">Badges</string>
    <string name="help_page">Help</string>

</resources>
