<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/exit_app"
        android:title="@string/exit" 
        />
    <item
        android:id="@+id/score_page"
        android:title="@string/score_page"
        android:icon="@drawable/ic_action_refresh"
        />
    <item
        android:id="@+id/journeys_page"
        android:title="@string/journeys_page"
        android:icon="@drawable/ic_action_paste"
        />
    <item
        android:id="@+id/badges_page"
        android:title="@string/badges_page"
        android:icon="@drawable/ic_action_select_all"
        />
    
    <item
        android:id="@+id/help_page"
        android:title="@string/help_page" 
        android:icon="@drawable/ic_action_help"
        />

</menu>
